--- a/css/layout/bottom-container.css
+++ b/css/layout/bottom-container.css
@@ -1,20 +1,13 @@
 /* BOTTOM CONTAINER LAYOUT & STRUCTURE */
 #workExp {
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    gap: 35px 5vw;
-    padding: 0 5vw;
-    align-items: center;
-}
-#workExp article {
-    margin: 0;
-}
-#workExp h5,
-#workExp li {
-    color: var(--body-txt);
+    margin-left: 1vw;
 }
 #workExp h5 span {
     text-transform: uppercase;
+}
+#workExp p {
+    order: 3;
+    margin: 0 5% 0 20%;
 }
 .others {
     display: flex;
