--- a/css/base/base.css
+++ b/css/base/base.css
@@ -1,3 +1,7 @@
+html,
+body { /* JUST IN CASE */
+    overflow-x: hidden;
+}
 body {
     background-color: var(--body-bg);
     color: var(--body-txt);
@@ -12,7 +16,7 @@ section {
 #bottom-container section:last-of-type {
     margin-bottom: 0;
 }
-article + article {
+article+article {
     margin-top: 30px !important;
 }
 
