--- a/css/layout/grid.css
+++ b/css/layout/grid.css
@@ -68,6 +68,10 @@ main {
         grid-column: 1;
         grid-row: auto;
     }
+    #carousel {
+        margin: 0 0 30px 0;
+        width: 100%;
+    }
     #left-panel {
         margin-left: 10dvw !important;
         margin-right: 10dvw !important;
