--- a/css/states/rtl.css
+++ b/css/states/rtl.css
@@ -1,13 +1,5 @@
 /* STYLES FOR RTL LANGUAGES */
 
-/* GRID.CSS */
-@media screen and (max-width: 768px) { /* TABLET */
-    html[dir="rtl"] #left-panel {
-        margin-left: auto;
-        margin-right: 5vw;
-    }
-}
-
 /* NAV.CSS */
 html[dir="rtl"] nav {
     left: auto;
@@ -42,12 +34,21 @@ html[dir="rtl"] article {
 html[dir="rtl"] h5 {
     margin: 0 10% 15px 5%;
 }
+html[dir="rtl"] article ol {
+    margin: 0 20% 0 5%;
+}
 html[dir="rtl"] #carousel h6 {
     margin-left: auto;
     margin-right: 10%;
 }
-html[dir="rtl"] article ol {
-    margin: 0 20% 0 5%;
+html[dir="rtl"] #carousel {
+    margin: 0 0 30px -5dvw;
+    width: calc(100% + 5dvw);
+}
+@media screen and (max-width: 768px) { /* TABLET */
+    html[dir="rtl"] #carousel {
+        width: 100%;
+    }
 }
 
 /* CAROUSEL.CSS */
