--- a/css/utils/icons.css
+++ b/css/utils/icons.css
@@ -7,29 +7,29 @@
     --transition: 0.5s;
     --cubic-bezier: cubic-bezier(0.68, -0.6, 0.32, 1.6);
 
-    will-change:
-        opacity,
-        transform;
+    will-change: opacity, translate, scale, rotate;
     opacity: 0;
-    transform:
-        scale(var(--scale))
-        translate(
-            var(--translate-x),
-            var(--translate-y)
-        )
-        rotate(var(--rotate));
+
+    translate: var(--translate-x) var(--translate-y);
+    scale: var(--scale);
+    rotate: var(--rotate);
+
     transition:
         opacity var(--transition) ease,
-        transform var(--transition) var(--cubic-bezier);
+        translate var(--transition) var(--cubic-bezier),
+        scale var(--transition) var(--cubic-bezier),
+        rotate var(--transition) var(--cubic-bezier);
     pointer-events: none;
 }
+
 .icons-snippet:hover { /* HOVER STATE */
     --scale: 1.2;
 }
+
 .icons-snippet.active,
 .icons-snippet.selected { /* ACTIVE STATE */
     opacity: 1;
-    transition-delay: 0.2s, 0s;
+    transition-delay: 0.2s, 0s, 0s, 0s;
     pointer-events: auto;
 }
 
@@ -37,6 +37,7 @@
 .icons-color-1 { /* LEFT-PANEL & MODAL */
     color: var(--accent-1);
 }
+
 .icons-color-2 { /* RIGHT-PANEL & BOTTOM-CONTAINER*/
     color: var(--accent-2);
 }
