--- a/css/states/rtl.css
+++ b/css/states/rtl.css
@@ -5,6 +5,9 @@ html[dir="rtl"] nav {
     left: auto;
     right: 20px;
 }
+html[dir="rtl"] #theme-dark-btn {
+    transform: scaleX(-1);
+}
 
 /* ICONS.CSS */
 html[dir="rtl"] .icons-color-1 {
@@ -18,10 +21,12 @@ html[dir="rtl"] h3 {
     border-left: none;
     border-right: 7px solid var(--accent-1);
 }
+
 html[dir="rtl"] #left-panel li {
     padding-left: auto;
     padding-right: 19px;
 }
+
 html[dir="rtl"] #contact address {
     margin-left: auto;
     margin-right: 40px;
@@ -31,20 +36,25 @@ html[dir="rtl"] #contact address {
 html[dir="rtl"] article {
     margin: 0 10% 0 5%;
 }
+
 html[dir="rtl"] h5 {
     margin: 0 10% 15px 5%;
 }
+
 html[dir="rtl"] article ol {
     margin: 0 20% 0 5%;
 }
+
 html[dir="rtl"] #carousel h6 {
     margin-left: auto;
     margin-right: 10%;
 }
+
 html[dir="rtl"] #carousel {
     margin: 0 0 30px -5dvw;
     width: calc(100% + 5dvw);
 }
+
 @media screen and (max-width: 768px) { /* TABLET */
     html[dir="rtl"] #carousel {
         width: 100%;
@@ -52,9 +62,10 @@ html[dir="rtl"] #carousel {
 }
 
 /* CAROUSEL.CSS */
-html[dir="rtl"] .carousel-control {
-    flex-direction: row-reverse;
+html[dir="rtl"] .carousel-control svg {
+    transform: scaleX(-1);
 }
+
 html[dir="rtl"] .carousel-scrollbar::after {
     left: auto;
     right: var(--scrollbar-offset, 0%);
@@ -62,9 +73,9 @@ html[dir="rtl"] .carousel-scrollbar::after {
         right 0.6s ease-in-out,
         width 0.6s ease-in-out;
 }
+
 html[dir="rtl"] #carousel-fallback {
     direction: rtl;
-    flex-direction: row-reverse;
 }
 
 /* BOTTOM-CONTAINER.CSS */
@@ -72,18 +83,22 @@ html[dir="rtl"] #workExp h5 {
     margin-right: 5%;
     margin-left: 0;
 }
+
 html[dir="rtl"] #workExp p {
     margin-right: 10%;
     margin-left: 0;
 }
+
 html[dir="rtl"] .other-links {
     right: auto;
     left: 2.5%;
 }
+
 html[dir="rtl"] #other-data ol {
     margin-left: auto;
     margin-right: 1vw;
 }
+
 @media screen and (max-width: 768px) { /* TABLET */
     html[dir="rtl"] #workExp,
     html[dir="rtl"] #other-data ul {
@@ -111,17 +126,11 @@ html[dir="rtl"] #vercel-icon {
     right: auto;
     left: 0;
 }
-html[dir="rtl"] #burger-btn[aria-expanded="true"] #burger-icon-top {
-    transform: rotate(45deg) translate(9px, 9px);
+html[dir="rtl"] #github-icon.icons-snippet.active {
+    --translate-x: 110px;
 }
-html[dir="rtl"] #burger-btn[aria-expanded="true"] #burger-icon-bottom {
-    transform: rotate(-45deg) translate(9px, -9px);
-}
-html[dir="rtl"] #github-icon.active {
-    transform: translateX(100px);
-}
-html[dir="rtl"] #vercel-icon.active {
-    transform: translateX(50px);
+html[dir="rtl"] #vercel-icon.icons-snippet.active {
+    --translate-x: 80px;
 }
 html[dir="rtl"] #menu-fallback {
     right: auto;
@@ -136,6 +145,7 @@ html[dir="rtl"] #signature {
     right: auto;
     left: 2.5%;
 }
+
 @media screen and (max-width: 768px) { /* TABLET */
     html[dir="rtl"] #signature {
         right: auto;
