--- a/css/components/slider.css
+++ b/css/components/slider.css
@@ -1,10 +1,8 @@
 /* SLIDER */
 @keyframes slider { /* CROSSFADE ANIMATION */
-    0%,
-    100% { opacity: 1; }
+    0%, 100% { opacity: 1; }
     37.5% { opacity: 1; }
-    50%,
-    87.5% { opacity: 0; }
+    50%, 87.5% { opacity: 0; }
 }
 
 #me picture {
