--- a/css/components/burger.css
+++ b/css/components/burger.css
@@ -52,3 +52,30 @@
 #vercel-icon.icons-snippet.active {
     --translate-x: -80px;
 }
+
+/* RESPONSIVE BREAKPOINTS */
+@media screen and (max-width: 360px) { /* PHONE */
+    #burger-icon,
+    #github-icon,
+    #vercel-icon {
+        width: 22.5px;
+        height: 22.5px;
+    }
+    #burger-icon-top,
+    #burger-icon-middle,
+    #burger-icon-bottom {
+        height: 4px;
+    }
+    .icons-snippet#burger-btn[aria-expanded="true"] #burger-icon-top {
+        --translate-y: 9.5px;
+    }
+    .icons-snippet#burger-btn[aria-expanded="true"] #burger-icon-bottom {
+        --translate-y: -9.5px;
+    }
+    #github-icon.icons-snippet.active {
+        --translate-x: -72px;
+    }
+    #vercel-icon.icons-snippet.active {
+        --translate-x: -52px;
+    }
+}
