--- a/css/states/signature.css
+++ b/css/states/signature.css
@@ -1,12 +1,17 @@
 #signature {
     position: absolute;
     top: -38px;
-    right: 2.5%;
+    right: 2.5dvw;
 }
 
 /* RESPONSIVE BREAKPOINTS */
 @media screen and (max-width: 768px) { /* TABLET */
     #signature {
-        right: 5%;
+        right: 5dvw;
+    }
+}
+@media screen and (max-width: 480px) { /* MEDIUM PHONE */
+    #signature {
+        right: 7dvw;
     }
 }
