--- a/css/components/modal.css
+++ b/css/components/modal.css
@@ -35,10 +35,14 @@ body.no-scroll {
     max-width: 90dvw;
     max-height: 90dvh;
     opacity: 0;
-    transition: opacity 0.3s ease-out;
+    transform: scale(0.3);
+    transition:
+        transform 0.6s ease-out,
+        opacity 0.6s ease-out;
 }
 #modal-container.show #modal-content {
     opacity: 1;
+    transform: scale(1);
 }
 
 /* CONTENT TYPES TOGGLING */
