--- a/css/states/cookies.css
+++ b/css/states/cookies.css
@@ -13,10 +13,18 @@
     margin: 0;
     text-align: center;
 }
-#accept-cookies {
+#all-cookies {
     background-color: var(--accent-1);
     color: var(--accent-2);
     font-weight: 700;
+    border-radius: 7px;
+    padding: 2.5px 5px;
+}
+#essential-cookies {
+    background-color: transparent;
+    color: var(--accent-1);
+    border: 2px solid var(--accent-1);
+    font-weight: 600;
     border-radius: 7px;
     padding: 2.5px 5px;
 }
@@ -28,12 +36,17 @@
 }
 
 /* RESPONSIVE LAYOUT */
-@media screen and (max-width: 768px) { /* TABLET */
+@media screen and (max-width: 768px) {
+
+    /* TABLET */
     #cookies-bar {
         text-align: justify;
     }
 }
-@media screen and (max-width: 360px) { /* PHONE */
+
+@media screen and (max-width: 360px) {
+
+    /* PHONE */
     #cookies-bar {
         text-align: justify;
     }
