fix resize in modal

--- a/css/base/typography.css
+++ b/css/base/typography.css
@@ -28,7 +28,7 @@ h1 {
     text-align: center;
     font-size: 76px;
     font-size: 4.75rem;
-    font-size: clamp(3rem, 8vw, 4.75rem) !important;
+    font-size: clamp(3rem, 8dvw, 4.75rem) !important;
 }
 h2 {
     font-weight: 200;
@@ -36,7 +36,7 @@ h2 {
     text-transform: uppercase;
     font-size: 20px;
     font-size: 1.25rem;
-    font-size: clamp(1.125rem, 3vw, 1.25rem) !important;
+    font-size: clamp(1.125rem, 3dvw, 1.25rem) !important;
 }
 p {
     text-align: justify;
@@ -46,7 +46,7 @@ h3 {
     font-weight: 700;
     font-size: 32px;
     font-size: 2rem;
-    font-size: clamp(1.5rem, 5vw, 2rem) !important;
+    font-size: clamp(1.5rem, 5dvw, 2rem) !important;
 }
 h4 {
     width: 100%;
@@ -54,7 +54,7 @@ h4 {
     font-weight: 700;
     font-size: 32px;
     font-size: 2rem;
-    font-size: clamp(1.5rem, 5vw, 2rem) !important;
+    font-size: clamp(1.5rem, 5dvw, 2rem) !important;
 }
 #bottom-container h4 {
     text-align: center;
@@ -71,7 +71,7 @@ h5 span {
 h6, label {
     font-size: 18px;
     font-size: 1.125rem;
-    font-size: clamp(1rem, 3vw, 1.125rem) !important;
+    font-size: clamp(1rem, 3dvw, 1.125rem) !important;
 }
 li span {
     font-style: italic;
