--- a/css/components/error.css
+++ b/css/components/error.css
@@ -41,13 +41,13 @@
     color: var(--accent-2);
     font-size: 160px;
     font-size: 10rem;
-    font-size: clamp(6rem, 10vw, 10rem) !important;
+    font-size: clamp(6rem, 10dvw, 10rem) !important;
 }
 #error-container h2 {
     font-weight: 400;
     font-size: 48px;
     font-size: 3rem;
-    font-size: clamp(1.5rem, 4vw, 3rem) !important;
+    font-size: clamp(1.5rem, 4dvw, 3rem) !important;
     text-align: center;
 }
 #return-btn-wrapper {
@@ -63,7 +63,7 @@
     text-decoration: none;
     font-size: 24px;
     font-size: 1.5rem;
-    font-size: clamp(1.1rem, 2.5vw, 1.5rem) !important;
+    font-size: clamp(1.1rem, 2.5dvw, 1.5rem) !important;
 }
 #error-container #signature {
     text-align: end;
