--- a/css/components/form.css
+++ b/css/components/form.css
@@ -12,11 +12,8 @@
 /* UTILITIES */
 @import url("../utils/icons.css");
 
-/* STATES */
-@import url("../states/rtl.css");
-
 /* FORM LAYOUT */
-body:has(form[action="partials/contact/form.php"]) {
+body:has(#contact-form) {
     margin: 0;
     padding: 0;
     width: 100dvw;
@@ -26,7 +23,8 @@ body:has(form[action="partials/contact/form.php"]) {
     flex-direction: column;
     border: 1px solid var(--panel-bg);
 }
-form[action="partials/contact/form.php"] {
+
+#contact-form {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows:
@@ -203,21 +201,19 @@ input[type="checkbox"]:checked::after {
     margin-bottom: 20px;
     border-radius: 4px;
     font-weight: 700;
+    color: var(--body-txt);
+    border: 1px solid var(--body-txt);
 }
 .form-message.success {
-    background-color: #d4edda;
-    color: #155724;
-    border: 1px solid #c3e6cb;
+    background-color: green;
 }
 .form-message.error {
-    background-color: #f8d7da;
-    color: #721c24;
-    border: 1px solid #f5c6cb;
+    background-color: red;
 }
 
 /* RESPONSIVE BREAKPOINTS
 Controlled by JS .tablet-layout class to sync perfectly with parent modal breakpoint */
-html.tablet-layout form[action="partials/contact/form.php"] {
+html.tablet-layout #contact-form {
     grid-template-rows:
             min-content
             min-content
